tests/testcase/errors/undefined_variable.ob
fun main() do
  return unknown_variable;
end